--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         url: "cems-api.yml",
         dom_id: '#swagger-ui',
         deepLinking: true,
+        docExpansion: 'none',
         presets: [
           SwaggerUIBundle.presets.apis,
           SwaggerUIStandalonePreset
